theme/static/css/styles.css
.prompt {
    display: none;
}

#sidebar .nav-list li a {
    padding-top: 5px;
    padding-right: 10px;
    padding-bottom: 5px;
    padding-left: 10px;
}

#sidebar ul.nav-list {
    padding: 0px;
}

#profile-pic {
    width: 100%;
    padding-bottom: 10px;
}

